--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <section id="product-catalog" class="product-catalog">
         <h2>Product Catalog</h2>
         <div class="catalog-item">
-            <img src="https://via.placeholder.com/250" alt="Kebaya 1">
+            <img src="kebaya1.png" alt="Kebaya 1">
             <h3>Elegant Kebaya Set</h3>
             <p>A stunning Kebaya set made with luxurious silk and intricate embroidery, perfect for special occasions.</p>
         </div>
