--- a/index.html
+++ b/index.html
@@ -64,18 +64,24 @@
             justify-content: center;
             color: white;
             text-align: center;
+            padding: 0 20px;
+            box-sizing: border-box;
+            flex-direction: column;
         }
 
         .hero h2 {
             font-size: 50px;
             font-weight: bold;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+            margin-bottom: 15px;
         }
 
         .hero p {
             font-size: 20px;
             margin-top: 15px;
             max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         /* Vision & Mission Section */
@@ -115,61 +121,25 @@
             line-height: 1.5;
         }
 
-        /* Vision Section Styling */
+        /* Adding some margin for better spacing */
+        .vision,
+        .mission {
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
         .vision {
             background-color: #f7f7f7;
-            border-radius: 8px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        /* Mission Section Styling */
         .mission {
             background-color: #eaf1f4;
-            border-radius: 8px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
-
-        /* Press Releases Section */
-        .press-releases {
-            background-color: #f9f9f9;
-            padding: 60px 20px;
-        }
-
-        .press-releases h2 {
-            text-align: center;
-            font-size: 30px;
-            margin-bottom: 30px;
-        }
-
-        .press-releases .article {
-            background-color: #fff;
-            padding: 20px;
-            margin: 15px 0;
-            border-radius: 8px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .press-releases .article h3 {
-            font-size: 22px;
-            margin-bottom: 10px;
-        }
-
-        .press-releases .article p {
-            font-size: 16px;
-        }
-
     </style>
 </head>
-
 <body>
     <header>
         <h1>Tjantik Kebaya Collection</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#about-us">About Us</a>
-            <a href="#press-releases">Press Releases</a>
-            <a href="#vision-mission">Vision & Mission</a>
-        </nav>
     </header>
 
     <!-- Hero Section -->
@@ -178,14 +148,8 @@
         <p>Explore timeless designs that blend tradition and modern elegance.</p>
     </section>
 
-    <!-- About Us Section -->
-    <section id="about-us" class="about-us">
-        <h2>About Us</h2>
-        <p>Tjantik Kebaya Collection offers a wide range of Kebaya designs that combine the best of traditional Indonesian culture with contemporary fashion trends. Our mission is to preserve and promote the elegance of the Kebaya while innovating with modern styles.</p>
-    </section>
-
     <!-- Vision & Mission Section -->
-    <section id="vision-mission" class="vision-mission">
+    <section class="vision-mission">
         <!-- Vision Section -->
         <div class="vision">
             <h2>Visi</h2>
@@ -208,23 +172,5 @@
             </ul>
         </div>
     </section>
-
-    <!-- Press Releases Section -->
-    <section id="press-releases" class="press-releases">
-        <h2>Press Releases</h2>
-        <div class="article">
-            <h3>Press Release 1</h3>
-            <p>Details about the press release or article related to new products, events, or innovations in Tjantik Kebaya Collection.</p>
-        </div>
-        <div class="article">
-            <h3>Press Release 2</h3>
-            <p>Another press release highlighting the company's initiatives and achievements.</p>
-        </div>
-        <div class="article">
-            <h3>Press Release 3</h3>
-            <p>Details about a press article that covers the company's market expansion or collaborations.</p>
-        </div>
-    </section>
-
 </body>
 </html>
