--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         /* Sejarah Section */
         .sejarah {
-            background-image: url('tjantik.png'); /* Replace with actual path to your tjantik.png image */
+            background-image: url('tjantik.png');
             background-size: cover;
             background-position: center;
             color: white;
