--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         /* Sejarah Section */
         .sejarah {
-            background-image: url('tjantik_icon.png');
+            background-image: url('logotjantik.png');
             background-size: cover;
             background-position: center;
             color: white;
